--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - media_value:/code/media/
     depends_on:
       - db
+      - redis
     env_file:
       - ./.env
 
@@ -36,6 +37,24 @@ services:
       - media_value:/code/media/
     depends_on:
       - web
+
+#  celery:
+#    build: ./code
+#    command: celery worker --app=core --loglevel=info
+#    volumes:
+#      - .:/code
+#    environment:
+#      - DEBUG=1
+#      - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
+#      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+#      - CELERY_BROKER=redis://redis:6379/0
+#      - CELERY_BACKEND=redis://redis:6379/0
+#    depends_on:
+#      - web
+#      - redis
+
+  redis:
+    image: redis:5.0
 
 volumes:
   postgres_data:
