--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ drf-yasg==1.20.0 #https://drf-yasg.readthedocs.io/en/stable/index.html
 django-environ==0.4.5  # https://github.com/joke2k/django-environ
 
 PyJWT==2.1.0 #https://pyjwt.readthedocs.io/en/stable/
+Pillow==8.3.1 #https://pypi.org/project/Pillow/
 
 gunicorn==20.1.0 #https://pypi.org/project/gunicorn/
 psycopg2-binary==2.9.1 #https://pypi.org/project/psycopg2-binary/
